# neo

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
apps/neo/: Cargo.toml
apps/neo-studio/: Cargo.toml
apps/neo-studio/src/: main.rs
apps/neo/src/: main.rs
apps/neo/src/commands/: filter_live.rs  infer_bench.rs  mod.rs  rife.rs
apps/neo/src/commands/desktop/: capture.rs  cuda_d3d11.rs  mod.rs
apps/neo/src/commands/mosaic/: blit.rs  mod.rs  mosaic.rs  stream.rs
apps/neo/src/commands/stream/: mod.rs  protocol.rs  recv.rs  send.rs
benchmarks/: RESULTS.md  results.csv  run.sh
benchmarks/python/: bench_decode_speed.py  bench_full.py  rife_compare.py  run_compare_locate.ps1  run_compare_yolo.ps1
benchmarks/results/: PYTHON_BENCH_RESULTS.md  RESULTS.md  locate_bench_baseline.json  locate_bench_neo.json  yolo_bench_filter_baseline.json  yolo_bench_filter_neo.json  yolo_bench_matting_baseline.json  yolo_bench_matting_neo.json  yolo_bench_multi_baseline_3.json  yolo_bench_multi_baseline_6.json  yolo_bench_multi_neo_3.json  yolo_bench_multi_neo_6.json  yolo_bench_rife_baseline.json  yolo_bench_rife_neo.json  yolo_bench_yolo_baseline.json  yolo_bench_yolo_neo.json
benchmarks/rust/: ffmpeg_compare.sh  run.sh
crates/cpu/neo-decode/src/: demuxer.rs  probe.rs
crates/cpu/neo-encode/src/: muxer.rs
crates/cpu/neo-filters/: Cargo.toml
crates/cpu/neo-filters/src/: resize.rs
crates/cpu/neo-infer/src/: lib.rs  model.rs  runtime.rs
crates/cpu/neo-io/: Cargo.toml
crates/cpu/neo-io/src/: mmap_reader.rs  network.rs
crates/cpu/neo-pipeline/src/: graph.rs  lib.rs
crates/neo-cli/: Cargo.toml
crates/neo-cli/src/: main.rs
crates/neo-core/: Cargo.toml
crates/neo-core/src/: color.rs  error.rs  format.rs  frame.rs  lib.rs  tensor.rs  timestamp.rs
crates/neo-decode/: Cargo.toml
crates/neo-decode/src/: decoder.rs  lib.rs
crates/neo-encode/: Cargo.toml
crates/neo-encode/src/: encoder.rs  lib.rs
crates/neo-filters/src/: color_convert.rs  crop.rs  denoise.rs  interpolate.rs  lib.rs  overlay.rs  style_transfer.rs  upscale.rs
crates/neo-gpu/: Cargo.toml
crates/neo-gpu/src/: buffer.rs  compute.rs  context.rs  lib.rs  shader.rs  tensor_bridge.rs
crates/neo-hwaccel/: Cargo.toml
crates/neo-hwaccel/src/: cuda.rs  encode_test.rs  interop.rs  lib.rs  nvdec.rs  nvdec_sys.rs  nvenc.rs  transcode.rs  wgpu_convert.rs  zerocopy_stream.rs
crates/neo-infer/: Cargo.toml
crates/neo-infer-ort/: Cargo.toml  PHASE_B2_PLAN.md
crates/neo-infer-ort/src/: cuda_backend.rs  generate.rs  lib.rs  wgpu_plan.rs
crates/neo-infer/src/: session.rs
crates/neo-io/src/: direct_storage.rs  lib.rs
crates/neo-lab/: Cargo.toml
crates/neo-lab/shaders/: 02_grayscale.wgsl  06_chromatic_aberration.wgsl  07_pixelate.wgsl
crates/neo-lab/src/: blit.rs  chain.rs  lib.rs  model_node.rs  stream.rs  studio.rs  wgpu_infer.rs
crates/neo-pipeline/: Cargo.toml
crates/neo-pipeline/src/: builder.rs  executor.rs  node.rs
demos/neo-desktop/: Cargo.toml
demos/neo-desktop/src/: capture.rs  main.rs
demos/neo-filter-live/: Cargo.toml
demos/neo-filter-live/src/: main.rs
demos/neo-infer-bench/: Cargo.toml
demos/neo-infer-bench/src/: main.rs
demos/neo-mosaic/: Cargo.toml
demos/neo-mosaic/src/: filters.rs  main.rs  mosaic.rs  stream.rs
demos/neo-rife-zc/: Cargo.toml
demos/neo-rife-zc/src/: main.rs
demos/neo-stream/: Cargo.toml
demos/neo-stream/src/: metrics.rs  receiver.rs  sender.rs  zerocopy_stream.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  PYTHON.md  SETUP.md
python/: requirements.txt
python/examples/: README.md  face_anon_live.py  face_swap_enhanced.py  face_swap_live.py  gpu_preprocess.py  gpu_preprocess_yolo.py  locate_live.py  matting_live.py  neo_filter_live.py  rife_live.py  yoloworld_live.py  yoloworld_multistream.py
python/examples/perception-engine/: app.py  extract.py  index.py  ingest.py  main.py  models.py  query.py  requirements.txt
python/neo-py/: Cargo.toml  README.md  pyproject.toml
python/neo-py/src/: lib.rs
python/tests/: check_parity.py  check_preprocess.py  smoke_test.py  test_event_sync.py  test_neo_module.py  test_query_stats.py
scripts/: benchmark.sh  dev.ps1  fetch-assets.ps1  setup-ort.ps1
shaders/: 00_color_grade.wgsl  01_passthrough.wgsl  11_toon.wgsl  13_sharpen.wgsl  16_scanlines.wgsl  17_solarize.wgsl  19_halftone.wgsl  20_duotone.wgsl
shaders/examples/: 03_invert.wgsl  04_sepia.wgsl  05_vignette.wgsl  08_edge_sobel.wgsl  09_threshold.wgsl  10_emboss.wgsl  12_sketch.wgsl  14_box_blur.wgsl  15_posterize.wgsl  18_crosshatch.wgsl
