[package]
name = "neo-studio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "neo-studio — standalone GUI: live shader chain + ONNX filters over a zero-copy GPU video pipeline"

[[bin]]
name = "neo-studio"
path = "src/main.rs"

[dependencies]
neo-lab.workspace = true
tracing-subscriber.workspace = true
