[package]
name = "neo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types: GPU tensor frames, pixel formats, color spaces, buffer abstractions"

[dependencies]
thiserror.workspace = true
bytemuck.workspace = true
half.workspace = true
ndarray.workspace = true
num-traits.workspace = true
serde.workspace = true
