[package]
name = "neo-decode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hardware-accelerated video decoding — NVDEC, VideoToolbox, VAAPI abstractions"

[dependencies]
neo-core.workspace = true
neo-gpu.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytemuck.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
