[package]
name = "neo-lab"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neo-Lab — live WGSL shader chain editor for video, with hot reload"

[dependencies]
neo-core.workspace = true
neo-gpu.workspace = true
neo-hwaccel.workspace = true
neo-infer-ort.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
tracing.workspace = true
pollster.workspace = true

winit = "0.30"
notify = "8"
