[workspace]

[package]
name = "neo-mosaic"
version = "0.1.0"
edition = "2021"
description = "Multi-stream GPU video wall — N×N grid with a different filter per tile (zerocopy)"

[[bin]]
name = "neo-mosaic"
path = "src/main.rs"

[dependencies]
# Neo crates (relative paths — not a workspace member)
neo-core    = { path = "../../crates/neo-core" }
neo-gpu     = { path = "../../crates/neo-gpu" }
neo-hwaccel = { path = "../../crates/neo-hwaccel" }

# GPU
wgpu     = { version = "29", default-features = false, features = ["vulkan", "wgsl"] }
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }

# CUDA (for DtoD copies in the device hook)
cudarc = { version = "0.19", default-features = false, features = ["cuda-12060", "dynamic-loading", "driver"] }

# Windowing
winit = "0.30"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
nvidia-video-codec-sdk = { path = "../../vendor/nvidia-video-codec-sdk" }
